--- a/package.json
+++ b/package.json
@@ -50,14 +50,21 @@
     }
   },
   "dependencies": {
-    "vue": "^3.2.25"
+    "@heroicons/vue": "^2.0.16",
+    "@types/vue-select": "^3.16.2",
+    "better-sqlite3": "^8.1.0",
+    "vue": "^3.2.25",
+    "vue-select": "^4.0.0-beta.3"
   },
   "devDependencies": {
+    "@types/better-sqlite3": "^7.6.3",
     "@vitejs/plugin-vue": "^2.3.3",
     "concurrently": "^7.2.2",
     "electron": "^20.0.3",
     "electron-builder": "^23.1.0",
     "pinia": "^2.0.18",
+    "stylus": "^0.59.0",
+    "stylus-loader": "^7.1.0",
     "typescript": "^4.5.4",
     "vite": "^2.9.9",
     "vue-router": "^4.1.3",
